Fixed button alignment

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -15,6 +15,12 @@
   cursor: pointer;
 }
 
+@media (max-width: 767px) {
+  .button {
+    margin-right: 0;
+  }
+}
+
 .button div {
   z-index: 1;
 }
