--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,6 +138,9 @@
 }
 
 @media (max-width: 767px) {
+  .main section:first-of-type {
+    min-height: 600px;
+  }
   .main section .content .title h1 {
     font-size: 3rem;
   }
@@ -149,7 +152,7 @@
 
   .main section .content .links {
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: flex-end;
   }
 }
